# package-sort

./: .gitignore  README.md  pyproject.toml
src/: package_sort.py  package_sort_test.py
